tests/compile_fail/id_without_compact.dd
from serdde.macros import Serde


@derive(Serde)
class StrayId:
    @Serde(id=1)
    value: i32


def main() -> i32:
    return 0
